<resources>
    <string name="app_name">Orang Ganteng</string>

    <string name="person_name">Nama Orang</string>
    <string name="person_nick">Nama Panggilan</string>
    <string name="person_desc">Deskripsi</string>
    <string name="person_photo">Foto</string>
    <string name="profile">Profile</string>

    <string name="my_name">Muh. Zulhaidar Wahyudi</string>
    <string name="email">zulhaidarwahyudi@gmail.com</string>

    <string-array name="name_person">
        <item>Rahul Sabara</item>
        <item>Syahrur Ramadhan</item>
        <item>Muh. Fathir Basir</item>
        <item>Syahrul Ramadan</item>
        <item>Tiyan Ade Harianto</item>
        <item>Muh. Yusriandi</item>
        <item>Fahruddin Raziki</item>
        <item>Lukman Majzul</item>
        <item>Rahmad Hidayat Arman</item>
        <item>Naufal</item>
    </string-array>

    <string-array name="nick_person">
        <item>Rahul</item>
        <item>Syahrur</item>
        <item>Fathir</item>
        <item>Syahrul</item>
        <item>Tiyan</item>
        <item>Yusriandi</item>
        <item>Fahruddin</item>
        <item>Lukman</item>
        <item>Rahmad</item>
        <item>Naufal</item>
    </string-array>

    <string-array name="desc_person">
        <item>Gantengnya pace asli Papua</item>
        <item>Orang Bima</item>
        <item>PMTS cabang Selayar</item>
        <item>Kolaka</item>
        <item>Anak baik hati MX KING selalu di hati</item>
        <item>Orang paling jujur sedunia</item>
        <item>Pintar pake bahasa Bima</item>
        <item>MABA angkatan 2022</item>
        <item>Enrekang kota</item>
        <item>Ketua Tingkat</item>
    </string-array>

    <string-array name="photo_person">
        <item>@drawable/rahul</item>
        <item>@drawable/syahrur</item>
        <item>@drawable/fatir</item>
        <item>@drawable/danu</item>
        <item>@drawable/tiyan</item>
        <item>@drawable/yuse</item>
        <item>@drawable/fahru</item>
        <item>@drawable/lukman</item>
        <item>@drawable/ramad</item>
        <item>@drawable/naufal</item>
    </string-array>

    <string name="desc_detail_dummy">Mantan ketua OPM asli dari Papua, memperjuangkan kemerdekaannya untuk kemakmuran Land of Dawn. Atas dedikasi beliau maka dia mulai kuliah di UMI jurusan Teknik Informatika agar memperjuangkan kemerdekaannya</string>
    <string-array name="desc_detail">
        <item>Mantan ketua OPM asli dari Papua, memperjuangkan kemerdekaannya untuk kemakmuran Land of Dawn. Atas dedikasi beliau maka dia mulai kuliah di UMI jurusan Teknik Informatika tapi enggan ngoding</item>
        <item>Bapak ngoding HTML, penghuni Aluddin jauh-jauh datang ke UMI hanya untuk menempuh pendidikan</item>
        <item>Lebih sering nongki di PMTS daripada di kost nya sendiri, kost berfungsi sebagai lemari pakaian</item>
        <item>KOLAKA pride, kurang tau orangnya karena ambil kelas karyawan</item>
        <item>Tiyan ade ke BTP naik MX KING</item>
        <item>Orang Paling jujur di dunia. Terdapat kitab suci yus sebagai pedoman kita sebagai pengikutnya
            \n1.kalau tidak berarti iyo
            \n2.kalau bilang i di kost berarti bukan di kosnya
            \n3.kalau bilang otw berarti mandi
            \n4.kalau nabilang dimana mko na kode ko kau dluan
            \n5.kalau bilang i adama di lokasi bararti di kostnya i
            \n6.kalau stay halal bearti kebalikan
            \n7.kalau bilang i siapa kosong bearti jemput i
            \n8.ome tv harus dia dlu yg buka
            \n9.adakah beratrti ayomi
            \n10.mau cuci baju berarti mau mi pulang
        </item>
        <item>Pintar pake Bahasa Bima, kalau menelpon juga sama orang dikampungnya pake Bahasa Bima</item>
        <item>MABA di sirkel, walaupun dia terlihat kecil tetapi dalam namanya yang indah terdapat gelar AMD</item>
        <item>Ketua tapi ndak na urus anak buahnya, kasihan Rahul terlantar</item>
        <item>Ketua Tingkat A4 2021, asisten lab juga pokoknya gacor orangnya</item>
    </string-array>

    <string name="follow_me">Ikuti </string>
    <string name="social_media1">Facebook</string>
    <string name="social_media2">Instagram</string>
    <string name="social_media3">Tiktok</string>

</resources>