<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailPerson">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


        <ImageView
            android:id="@+id/img_person"
            android:layout_width="240dp"
            android:layout_height="360dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@id/ll_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/rahul" />

        <LinearLayout
            android:id="@+id/ll_person"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_person"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_person_name"
                style="@style/TextTitle"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_name"/>

            <TextView
                android:id="@+id/tv_person_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/person_nick"
                style="@style/TextDesc" />

            <TextView
                android:id="@+id/tv_person_desc_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextContext"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:text="@string/desc_detail_dummy" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextTitle"
            android:textSize="22sp"
            android:layout_margin="16dp"
            android:text="@string/follow_me"
            app:layout_constraintTop_toBottomOf="@id/img_person"/>

        <LinearLayout
            android:id="@+id/ll_socialmedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_follow">

        <ImageView
            android:id="@+id/img_socialmediafb"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/social_media1"
            tools:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/img_socialmedia2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/social_media2"
            tools:srcCompat="@drawable/instagram" />

        <ImageView
            android:id="@+id/img_socialmedia3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/social_media3"
            tools:srcCompat="@drawable/tiktok" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_detail_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextContext"
        android:textSize="18sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/ll_socialmedia"
        android:text="@string/detail_text"
        android:fontFamily="@font/nunito"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>